--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Logs
 Assembly-CSharp.csproj
 Assembly-CSharp-Editor.csproj
 CsharpMainProject.sln
+.vs/CSharpMainProjectMyFork/FileContentIndex/7f811887-3b4c-4fc5-9e7f-995748ba13b8.vsidx
